@@ -317,11 +317,11 @@ public class FieldRecordInfo extends CDialog
 			{
 				if (OldValue != null)
 				{
-					showOldValue = m_intFormat.format(new Integer(OldValue));
+					showOldValue = m_intFormat.format(Integer.valueOf(OldValue));
 				}
 				if (NewValue != null)
 				{
-					showNewValue = m_intFormat.format(new Integer(NewValue));
+					showNewValue = m_intFormat.format(Integer.valueOf(NewValue));
 				}
 			}
 			else if (DisplayType.isNumeric(column.getAD_Reference_ID()))
