@@ -205,7 +205,7 @@ class BpartnerRestControllerTest
 		// invoke the method under test
 		final ResponseEntity<JsonResponseComposite> result = bpartnerRestController.retrieveBPartner(bPartnerExternalIdentifier);
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseComposite resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -217,7 +217,7 @@ class BpartnerRestControllerTest
 		// invoke the method under test
 		final ResponseEntity<JsonResponseComposite> result = bpartnerRestController.retrieveBPartner(Integer.toString(C_BPARTNER_ID));
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseComposite resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -231,7 +231,7 @@ class BpartnerRestControllerTest
 		// invoke the method under test
 		final ResponseEntity<JsonResponseComposite> result = bpartnerRestController.retrieveBPartner(bPartnerExternalIdentifier);
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseComposite resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -248,7 +248,7 @@ class BpartnerRestControllerTest
 				bPartnerExternalIdentifier,
 				bPartnerContactExternalIdentifier);
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseContact resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -265,7 +265,7 @@ class BpartnerRestControllerTest
 				bPartnerExternalIdentifier,
 				bPartnerContactExternalIdentifier);
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseContact resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -282,7 +282,7 @@ class BpartnerRestControllerTest
 				bPartnerExternalIdentifier,
 				bPartnerLocationExternalIdentifier);
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseLocation resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -299,7 +299,7 @@ class BpartnerRestControllerTest
 				bPartnerExternalIdentifier,
 				bPartnerLocationExternalIdentifier);
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseLocation resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -316,7 +316,7 @@ class BpartnerRestControllerTest
 				bPartnerExternalIdentifier,
 				bPartnerLocationExternalIdentifier);
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseLocation resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -461,7 +461,7 @@ class BpartnerRestControllerTest
 		final JsonRequestBPartnerUpsert bpartnerUpsertRequest = loadUpsertRequest("BPartnerRestControllerTest_Update_BPartner_Name_Insert_Location.json");
 
 		assertThat(bpartnerUpsertRequest.getRequestItems()).hasSize(1);
-		assertThat(bpartnerUpsertRequest.getRequestItems().get(0).getBpartnerComposite().getLocationsNotNull().getRequestItems()).hasSize(1);
+		assertThat(bpartnerUpsertRequest.getRequestItems().getFirst().getBpartnerComposite().getLocationsNotNull().getRequestItems()).hasSize(1);
 
 		final I_C_BPartner bpartnerRecord = newInstance(I_C_BPartner.class);
 		bpartnerRecord.setC_BPartner_ID(12345);
@@ -488,7 +488,7 @@ class BpartnerRestControllerTest
 
 		// use the rest controller to get the json that we can then verify
 		final ResponseEntity<JsonResponseComposite> result = bpartnerRestController.retrieveBPartner("12345");
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseComposite resultBody = result.getBody();
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
 
@@ -548,12 +548,12 @@ class BpartnerRestControllerTest
 			@NonNull final ResponseEntity<JsonResponseBPartnerCompositeUpsert> result,
 			@NonNull final String bpartnerIdentifier)
 	{
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 
 		final JsonResponseBPartnerCompositeUpsert resultBody = result.getBody();
 		assertThat(resultBody.getResponseItems()).hasSize(1);
 
-		final JsonResponseBPartnerCompositeUpsertItem responseCompositeItem = resultBody.getResponseItems().get(0);
+		final JsonResponseBPartnerCompositeUpsertItem responseCompositeItem = resultBody.getResponseItems().getFirst();
 		assertThat(responseCompositeItem.getResponseBPartnerItem().getIdentifier()).isEqualTo(bpartnerIdentifier);
 
 		return responseCompositeItem.getResponseBPartnerItem().getMetasfreshId();
@@ -581,7 +581,7 @@ class BpartnerRestControllerTest
 		initialCounts.assertCountsUnchanged();
 
 		assertThat(result.getBody().getResponseItems()).hasSize(1);
-		final JsonResponseBPartnerCompositeUpsertItem jsonResponseCompositeUpsertItem = result.getBody().getResponseItems().get(0);
+		final JsonResponseBPartnerCompositeUpsertItem jsonResponseCompositeUpsertItem = result.getBody().getResponseItems().getFirst();
 
 		assertThat(jsonResponseCompositeUpsertItem.getResponseBPartnerItem().getIdentifier()).isEqualTo("ext-ALBERTA-1234567");
 		assertThat(jsonResponseCompositeUpsertItem.getResponseBPartnerItem().getMetasfreshId().getValue()).isEqualTo(bpartnerRecord.getC_BPartner_ID());
@@ -591,7 +591,7 @@ class BpartnerRestControllerTest
 		assertThat(bpartnerRecord.getCompanyName()).isEqualTo("otherCompanyName");
 
 		final ExternalBusinessKey externalBusinessKey =
-				ExternalBusinessKey.of(bpartnerUpsertRequest.getRequestItems().get(0).getBpartnerComposite().getBpartner().getCode());
+				ExternalBusinessKey.of(bpartnerUpsertRequest.getRequestItems().getFirst().getBpartnerComposite().getBpartner().getCode());
 
 		if (externalBusinessKey.getType().equals(ExternalBusinessKey.Type.VALUE))
 		{
@@ -677,11 +677,11 @@ class BpartnerRestControllerTest
 				bPartnerIdentifier,
 				JsonRequestContactUpsert.builder().requestItem(jsonContact).build());
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 
 		final JsonResponseUpsert response = result.getBody();
 		assertThat(response.getResponseItems()).hasSize(1);
-		final JsonResponseUpsertItem responseItem = response.getResponseItems().get(0);
+		final JsonResponseUpsertItem responseItem = response.getResponseItems().getFirst();
 		assertThat(responseItem.getIdentifier()).isEqualTo(jsonContact.getContactIdentifier());
 
 		final JsonMetasfreshId metasfreshId = responseItem.getMetasfreshId();
@@ -729,11 +729,11 @@ class BpartnerRestControllerTest
 																	   .contact(jsonContact)
 																	   .build()).build());
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 
 		final JsonResponseUpsert response = result.getBody();
 		assertThat(response.getResponseItems()).hasSize(1);
-		final JsonResponseUpsertItem responseItem = response.getResponseItems().get(0);
+		final JsonResponseUpsertItem responseItem = response.getResponseItems().getFirst();
 		assertThat(responseItem.getIdentifier()).isEqualTo(contactIdentifier);
 
 		final JsonMetasfreshId metasfreshId = responseItem.getMetasfreshId();
@@ -763,11 +763,11 @@ class BpartnerRestControllerTest
 				"ext-" + EXTERNAL_SYSTEM_NAME + "-" + C_BPARTNER_EXTERNAL_ID,
 				JsonRequestLocationUpsert.builder().requestItem(jsonLocation).build());
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 
 		final JsonResponseUpsert response = result.getBody();
 		assertThat(response.getResponseItems()).hasSize(1);
-		final JsonResponseUpsertItem responseItem = response.getResponseItems().get(0);
+		final JsonResponseUpsertItem responseItem = response.getResponseItems().getFirst();
 
 		assertThat(responseItem.getIdentifier()).isEqualTo(jsonLocation.getLocationIdentifier());
 
@@ -778,7 +778,7 @@ class BpartnerRestControllerTest
 
 		assertThat(persistedPage).hasSize(1);
 
-		final BPartnerComposite persistedResult = persistedPage.get(0);
+		final BPartnerComposite persistedResult = persistedPage.getFirst();
 		final Optional<BPartnerLocation> persistedLocation = persistedResult.extractLocation(BPartnerLocationId.ofRepoId(persistedResult.getBpartner().getId(), metasfreshId.getValue()));
 		assertThat(persistedLocation).isPresent();
 
@@ -799,10 +799,10 @@ class BpartnerRestControllerTest
 											 .build())
 						.build());
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 		final JsonResponseUpsert response = result.getBody();
 		assertThat(response.getResponseItems()).hasSize(1);
-		final JsonResponseUpsertItem responseItem = response.getResponseItems().get(0);
+		final JsonResponseUpsertItem responseItem = response.getResponseItems().getFirst();
 		assertThat(responseItem.getIdentifier()).isEqualTo("iban-1");
 		assertThat(responseItem.getMetasfreshId()).isNotNull();
 
@@ -837,7 +837,7 @@ class BpartnerRestControllerTest
 		// invoke the method under test
 		final ResponseEntity<JsonResponseCompositeList> page1 = bpartnerRestController.retrieveBPartnersSince(0L, null);
 
-		assertThat(page1.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(page1.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseCompositeList page1Body = page1.getBody();
 		assertThat(page1Body.getItems()).hasSize(2);
 
@@ -846,7 +846,7 @@ class BpartnerRestControllerTest
 
 		final ResponseEntity<JsonResponseCompositeList> page2 = bpartnerRestController.retrieveBPartnersSince(null, page2Id);
 
-		assertThat(page2.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(page2.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseCompositeList page2Body = page2.getBody();
 		assertThat(page2Body.getItems()).hasSize(2);
 
@@ -855,7 +855,7 @@ class BpartnerRestControllerTest
 
 		final ResponseEntity<JsonResponseCompositeList> page3 = bpartnerRestController.retrieveBPartnersSince(null, page3Id);
 
-		assertThat(page3.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(page3.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseCompositeList page3Body = page3.getBody();
 		assertThat(page3Body.getItems()).hasSize(1);
 
@@ -877,7 +877,7 @@ class BpartnerRestControllerTest
 		saveRecord(bPartnerProductRecord);
 
 		final ResponseEntity<JsonResponseProductBPartner> page1 = bpartnerRestController.retrieveBPartnerProducts(String.valueOf(bPartnerProductRecord.getC_BPartner_ID()));
-		assertThat(page1.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(page1.getStatusCode()).isEqualTo(HttpStatus.OK);
 
 		final JsonResponseProductBPartner responseProductBPartner = page1.getBody();
 		assertThat(responseProductBPartner).isNotNull();
