@@ -193,7 +193,7 @@ public class QualityInvoiceLineGroupExpectation extends AbstractExpectation
 			final List<I_C_Invoice_Detail> overridingDetail = retriveInvoiceOverridingDetail(ic);
 
 			Assert.assertEquals("overriding details: there shall be exactly one", overridingDetail.size(), 1);
-			overridingDetailException.assertExpected("overridingDetailException", overridingDetail.get(0));
+			overridingDetailException.assertExpected("overridingDetailException", overridingDetail.getFirst());
 		}
 
 		final List<I_C_Invoice_Detail> detailsBefore = retriveInvoiceDetails(ic, true);
